; ModuleID = '/home/carl/AnghaBench/streem/src/extr_io.c_io_task_add.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_io.c_io_task_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strm_task = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.strm_task*)* @io_task_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @io_task_add(%struct.strm_task* %0) #0 {
  %2 = alloca %struct.strm_task*, align 8
  %3 = alloca i32*, align 8
  store %struct.strm_task* %0, %struct.strm_task** %2, align 8
  %4 = load %struct.strm_task*, %struct.strm_task** %2, align 8
  %5 = getelementptr inbounds %struct.strm_task, %struct.strm_task* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32* @strm_value_foreign(i32 %6)
  store i32* %7, i32** %3, align 8
  %8 = call i32 (...) @strm_nil_value()
  %9 = load %struct.strm_task*, %struct.strm_task** %2, align 8
  %10 = getelementptr inbounds %struct.strm_task, %struct.strm_task* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = load %struct.strm_task*, %struct.strm_task** %2, align 8
  %13 = call i32 @strm_task_add(i32* %11, %struct.strm_task* %12)
  ret void
}

declare dso_local i32* @strm_value_foreign(i32) #1

declare dso_local i32 @strm_nil_value(...) #1

declare dso_local i32 @strm_task_add(i32*, %struct.strm_task*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
